# ren-substrate

./: Cargo.toml  README.md
ren-token/: Cargo.toml
ren-token/src/: lib.rs  verify_signature.rs
rentoken-pallet/: Cargo.toml
rentoken-pallet/src/: ecrecover.rs  lib.rs  verify_signature.rs
src/: ecrecover.rs  lib.rs  mock.rs  tests.rs  verify_signature.rs
